робота над помилками

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section command">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="img-list list">
-            <li>
+            <li class="item-command">
               <img
                 class="img"
                 src="./images/designer.jpg"
@@ -144,12 +144,12 @@
                 height="260"
               />
 
-              <div>
+              <div class="name-work">
                 <h3 class="section-title-name">Ігор Дем'яненко</h3>
                 <p class="section-text" lang="en">Product Designer</p>
               </div>
             </li>
-            <li>
+            <li class="item-command">
               <img
                 src="./images/frontend.jpg"
                 alt="фото"
@@ -157,12 +157,12 @@
                 height="260"
               />
 
-              <div>
+              <div class="name-work">
                 <h3 class="section-title-name">Ольга Рєпіна</h3>
                 <p class="section-text" lang="en">Frontend Developer</p>
               </div>
             </li>
-            <li>
+            <li class="item-command">
               <img
                 src="./images/marketing.jpg"
                 alt="фото"
@@ -170,15 +170,15 @@
                 height="260"
               />
 
-              <div>
+              <div class="name-work">
                 <h3 class="section-title-name">Микола Тарасов</h3>
                 <p class="section-text" lang="en">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="item-command">
               <img src="./images/ui.jpg" alt="фото" width="270" height="260" />
 
-              <div>
+              <div class="name-work">
                 <h3 class="section-title-name">Михайло Єрмаков</h3>
                 <p class="section-text" lang="en">UI Designer</p>
               </div>
